@@ -1,3 +1,8 @@
+2007-04-19  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03923] <pre> in <table>
+	* file.c, table.c: avoid extra blanks in pre in table.
+
 2007-05-23  tamo
 
 	* [20070121110209@w3mbbs] unnecessary decoding in linein.c
@@ -8821,4 +8826,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.980 2007/05/23 12:14:24 inu Exp $
+$Id: ChangeLog,v 1.981 2007/05/23 12:26:56 inu Exp $
